<resources>
    <string name="app_name">Suven</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Add</string>
    <string name="title_profile">Messages</string>

    <!-- Form -->
    <string name="is_fixed_question">Is this equity one time or recurring?</string>
    <string name="fixed">Fixed</string>
    <string name="variable">Variable</string>
    <string name="date_of_purchase">Date of purchase</string>
    <string name="number_of_units">Number of units</string>
    <string name="purchase_price">Purchase price</string>
    <string name="enter_your_message_here">Enter your message here</string>

    <!-- Snackbar Texts -->
    <string name="select_a_member">Select a member</string>
    <string name="blank_form_error">Form cannot be blank</string>
    <string name="zero_values">Values cannot zero</string>
    <string name="purchase_added_success">Purchase added successfully</string>
    <string name="no_units_purchased_so_far">No Units Purchased So Far</string>
    <string name="main_page_selected">%s page is selected</string>


</resources>