<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.nikhil.suven.ui.goals.GoalsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_rounded_start"
            android:padding="@dimen/marginS"
            android:src="@drawable/ic_round_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="@id/form_CL"
            app:layout_constraintEnd_toStartOf="@id/form_CL"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/form_CL" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/form_CL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/marginXL"
            android:layout_marginTop="@dimen/marginL"
            android:layout_marginEnd="@dimen/marginXL"
            android:background="@drawable/background_card"
            android:padding="@dimen/marginM">

            <Spinner
                android:id="@+id/who_Spinner"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginL"
                android:spinnerMode="dropdown"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/question_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginXL"
                android:text="@string/is_fixed_question"
                app:layout_constraintTop_toBottomOf="@id/who_Spinner" />

            <TextView
                android:id="@+id/fixed_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginL"
                android:text="@string/fixed"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/question_TextView" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/isFixed_SwitchCompact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginM"
                app:layout_constraintTop_toTopOf="@id/fixed_TextView"
                app:layout_constraintBottom_toBottomOf="@id/fixed_TextView"
                app:layout_constraintStart_toEndOf="@id/fixed_TextView" />

            <TextView
                android:id="@+id/variable_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginM"
                android:text="@string/variable"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@id/fixed_TextView"
                app:layout_constraintStart_toEndOf="@id/isFixed_SwitchCompact" />

            <TextView
                android:id="@+id/purchase_TextView"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginXL"
                android:hint="@string/date_of_purchase"
                app:printDate="@{viewModel.dateLive}"
                app:layout_constraintTop_toBottomOf="@id/isFixed_SwitchCompact" />

            <EditText
                android:id="@+id/units_EdiText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginXL"
                android:hint="@string/number_of_units"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@id/purchase_TextView" />

            <EditText
                android:id="@+id/purchasePrice_EdiText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginXL"
                android:hint="@string/purchase_price"
                android:inputType="numberDecimal"
                app:layout_constraintTop_toBottomOf="@id/units_EdiText" />

            <Button
                android:id="@+id/saveGoal_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginXL"
                android:text="Add More"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/purchasePrice_EdiText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/more_ImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginXL"
            android:background="@drawable/background_more_count"
            android:src="@drawable/ic_round_more_vert_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/form_CL" />

        <TextView
            android:id="@+id/count_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/background_ring_count"
            app:layout_constraintStart_toStartOf="@id/more_ImageView"
            app:layout_constraintBottom_toTopOf="@id/more_ImageView"
            app:layout_constraintTop_toTopOf="@id/more_ImageView"
            app:layout_constraintEnd_toStartOf="@id/more_ImageView"
            tools:text="1"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_rounded_end"
            android:padding="@dimen/marginS"
            android:src="@drawable/ic_round_arrow_forward_24"
            app:layout_constraintBottom_toBottomOf="@id/form_CL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/form_CL"
            app:layout_constraintTop_toTopOf="@id/form_CL" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>